@@ -16,7 +16,6 @@ import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 
-import org.eclipse.rdf4j.common.annotation.Experimental;
 import org.eclipse.rdf4j.model.IRI;
 
 /**
@@ -33,70 +32,47 @@ public class TupleQueryResultFormat extends QueryResultFormat {
 	 *-----------*/
 
 	/**
-	 * Indicates that RDF-star triples can be serialized natively for this format.
+	 * Indicates that RDF triple terms can be serialized natively for this format.
 	 */
-	private static final boolean SUPPORTS_RDF_STAR = true;
+	private static final boolean SUPPORTS_TRIPLE_TERMS = true;
 
 	/**
-	 * Indicates that RDF-star triples will NOT be serialized natively for this format.
+	 * Indicates that RDF triple terms will NOT be serialized natively for this format.
 	 */
-	private static final boolean NO_RDF_STAR = false;
+	private static final boolean NO_TRIPLE_TERMS = false;
 
 	/**
 	 * SPARQL Query Results XML Format.
 	 */
 	public static final TupleQueryResultFormat SPARQL = new TupleQueryResultFormat("SPARQL/XML",
 			Arrays.asList("application/sparql-results+xml", "application/xml"), StandardCharsets.UTF_8,
-			Arrays.asList("srx", "xml"), SPARQL_RESULTS_XML_URI, NO_RDF_STAR);
-
-	/**
-	 * SPARQL-star Query Results XML Format (like SPARQL/XML but with native RDF-star support).
-	 */
-	@Experimental
-	public static final TupleQueryResultFormat SPARQL_STAR = new TupleQueryResultFormat("SPARQL-star/XML",
-			List.of("application/x-sparqlstar-results+xml"), StandardCharsets.UTF_8,
-			List.of("srxs"), null, SUPPORTS_RDF_STAR);
+			Arrays.asList("srx", "xml"), SPARQL_RESULTS_XML_URI, SUPPORTS_TRIPLE_TERMS);
 
 	/**
 	 * Binary RDF results table format.
 	 */
 	public static final TupleQueryResultFormat BINARY = new TupleQueryResultFormat("BINARY",
-			"application/x-binary-rdf-results-table", null, "brt", SUPPORTS_RDF_STAR);
+			"application/x-binary-rdf-results-table", null, "brt", SUPPORTS_TRIPLE_TERMS);
 
 	/**
 	 * SPARQL Query Results JSON Format.
 	 */
 	public static final TupleQueryResultFormat JSON = new TupleQueryResultFormat("SPARQL/JSON",
 			Arrays.asList("application/sparql-results+json", "application/json"), StandardCharsets.UTF_8,
-			Arrays.asList("srj", "json"), SPARQL_RESULTS_JSON_URI, NO_RDF_STAR);
-
-	/**
-	 * SPARQL-star Query Results JSON Format (like SPARQL JSON but with RDF-star support).
-	 */
-	@Experimental
-	public static final TupleQueryResultFormat JSON_STAR = new TupleQueryResultFormat("SPARQL-star/JSON",
-			List.of("application/x-sparqlstar-results+json"), StandardCharsets.UTF_8,
-			List.of("srjs"), null, SUPPORTS_RDF_STAR);
+			Arrays.asList("srj", "json"), SPARQL_RESULTS_JSON_URI, SUPPORTS_TRIPLE_TERMS);
 
 	/**
 	 * SPARQL Query Result CSV Format.
 	 */
 	public static final TupleQueryResultFormat CSV = new TupleQueryResultFormat("SPARQL/CSV", List.of("text/csv"),
-			StandardCharsets.UTF_8, List.of("csv"), SPARQL_RESULTS_CSV_URI, NO_RDF_STAR);
+			StandardCharsets.UTF_8, List.of("csv"), SPARQL_RESULTS_CSV_URI, SUPPORTS_TRIPLE_TERMS);
 
 	/**
 	 * SPARQL Query Result TSV Format.
 	 */
 	public static final TupleQueryResultFormat TSV = new TupleQueryResultFormat("SPARQL/TSV",
 			List.of("text/tab-separated-values"), StandardCharsets.UTF_8, List.of("tsv"),
-			SPARQL_RESULTS_TSV_URI, NO_RDF_STAR);
-
-	/**
-	 * SPARQL-star Query Results TSV Format (like SPARQL TSV but with RDF-star support).
-	 */
-	public static final TupleQueryResultFormat TSV_STAR = new TupleQueryResultFormat("SPARQL-star/TSV",
-			Arrays.asList("text/x-tab-separated-values-star", "application/x-sparqlstar-results+tsv"),
-			StandardCharsets.UTF_8, List.of("tsvs"), null, SUPPORTS_RDF_STAR);
+			SPARQL_RESULTS_TSV_URI, SUPPORTS_TRIPLE_TERMS);
 
 	public static final TupleQueryResultFormat XSLX = new TupleQueryResultFormat("SPARQL/XLSX",
 			"application/vnd.ms-excel", "xlsx");
@@ -109,9 +85,9 @@ public class TupleQueryResultFormat extends QueryResultFormat {
 	 *-----------*/
 
 	/**
-	 * Flag indicating whether the TupleQueryResultFormat can encode RDF-star triples natively.
+	 * Flag indicating whether the TupleQueryResultFormat can encode RDF triple terms natively.
 	 */
-	private final boolean supportsRDFStar;
+	private final boolean supportsTripleTerms;
 
 	/*--------------*
 	 * Constructors *
@@ -126,22 +102,22 @@ public class TupleQueryResultFormat extends QueryResultFormat {
 	 * @param fileExt  The (default) file extension for the format, e.g. <var>srx</var> for SPARQL/XML.
 	 */
 	public TupleQueryResultFormat(String name, String mimeType, String fileExt) {
-		this(name, mimeType, null, fileExt, NO_RDF_STAR);
+		this(name, mimeType, null, fileExt, NO_TRIPLE_TERMS);
 	}
 
 	/**
 	 * Creates a new TupleQueryResultFormat object.
 	 *
-	 * @param name            The name of the format, e.g. "SPARQL/XML".
-	 * @param mimeType        The MIME type of the format, e.g. <var>application/sparql-results+xml</var> for the
-	 *                        SPARQL/XML format.
-	 * @param fileExt         The (default) file extension for the format, e.g. <var>srx</var> for SPARQL/XML.
-	 * @param supportsRDFStar <var>True</var> if the TupleQueryResultFormat supports the encoding of RDF-star triples
-	 *                        natively and <var>false</var> otherwise.
-	 * @since 3.2.0
+	 * @param name                The name of the format, e.g. "SPARQL/XML".
+	 * @param mimeType            The MIME type of the format, e.g. <var>application/sparql-results+xml</var> for the
+	 *                            SPARQL/XML format.
+	 * @param fileExt             The (default) file extension for the format, e.g. <var>srx</var> for SPARQL/XML.
+	 * @param supportsTripleTerms <var>True</var> if the TupleQueryResultFormat supports the encoding of RDF triple
+	 *                            terms natively and <var>false</var> otherwise.
+	 * @since 6.0.0
 	 */
-	public TupleQueryResultFormat(String name, String mimeType, String fileExt, boolean supportsRDFStar) {
-		this(name, mimeType, null, fileExt, supportsRDFStar);
+	public TupleQueryResultFormat(String name, String mimeType, String fileExt, boolean supportsTripleTerms) {
+		this(name, mimeType, null, fileExt, supportsTripleTerms);
 	}
 
 	/**
@@ -154,25 +130,26 @@ public class TupleQueryResultFormat extends QueryResultFormat {
 	 * @param fileExt  The (default) file extension for the format, e.g. <var>srx</var> for SPARQL/XML.
 	 */
 	public TupleQueryResultFormat(String name, String mimeType, Charset charset, String fileExt) {
-		this(name, mimeType, charset, fileExt, NO_RDF_STAR);
+		this(name, mimeType, charset, fileExt, NO_TRIPLE_TERMS);
 	}
 
 	/**
 	 * Creates a new TupleQueryResultFormat object.
 	 *
-	 * @param name            The name of the format, e.g. "SPARQL/XML".
-	 * @param mimeType        The MIME type of the format, e.g. <var>application/sparql-results+xml</var> for the
-	 *                        SPARQL/XML format.
-	 * @param charset         The default character encoding of the format. Specify <var>null</var> if not applicable.
-	 * @param fileExt         The (default) file extension for the format, e.g. <var>srx</var> for SPARQL/XML.
-	 * @param supportsRDFStar <var>True</var> if the TupleQueryResultFormat supports the encoding of RDF-star triples
-	 *                        natively and <var>false</var> otherwise.
-	 * @since 3.2.0
+	 * @param name                The name of the format, e.g. "SPARQL/XML".
+	 * @param mimeType            The MIME type of the format, e.g. <var>application/sparql-results+xml</var> for the
+	 *                            SPARQL/XML format.
+	 * @param charset             The default character encoding of the format. Specify <var>null</var> if not
+	 *                            applicable.
+	 * @param fileExt             The (default) file extension for the format, e.g. <var>srx</var> for SPARQL/XML.
+	 * @param supportsTripleTerms <var>True</var> if the TupleQueryResultFormat supports the encoding of RDF triple
+	 *                            terms natively and <var>false</var> otherwise.
+	 * @since 6.0.0
 	 */
 	public TupleQueryResultFormat(String name, String mimeType, Charset charset, String fileExt,
-			boolean supportsRDFStar) {
+			boolean supportsTripleTerms) {
 		super(name, mimeType, charset, fileExt);
-		this.supportsRDFStar = supportsRDFStar;
+		this.supportsTripleTerms = supportsTripleTerms;
 	}
 
 	/**
@@ -188,27 +165,28 @@ public class TupleQueryResultFormat extends QueryResultFormat {
 	 */
 	public TupleQueryResultFormat(String name, Collection<String> mimeTypes, Charset charset,
 			Collection<String> fileExtensions) {
-		this(name, mimeTypes, charset, fileExtensions, NO_RDF_STAR);
+		this(name, mimeTypes, charset, fileExtensions, NO_TRIPLE_TERMS);
 	}
 
 	/**
 	 * Creates a new TupleQueryResultFormat object.
 	 *
-	 * @param name            The name of the format, e.g. "SPARQL/XML".
-	 * @param mimeTypes       The MIME types of the format, e.g. <var>application/sparql-results+xml</var> for the
-	 *                        SPARQL/XML format. The first item in the list is interpreted as the default MIME type for
-	 *                        the format.
-	 * @param charset         The default character encoding of the format. Specify <var>null</var> if not applicable.
-	 * @param fileExtensions  The format's file extensions, e.g. <var>srx</var> for SPARQL/XML files. The first item in
-	 *                        the list is interpreted as the default file extension for the format.
-	 * @param supportsRDFStar <var>True</var> if the TupleQueryResultFormat supports the encoding of RDF-star triples
-	 *                        natively and <var>false</var> otherwise.
-	 * @since 3.2.0
+	 * @param name                The name of the format, e.g. "SPARQL/XML".
+	 * @param mimeTypes           The MIME types of the format, e.g. <var>application/sparql-results+xml</var> for the
+	 *                            SPARQL/XML format. The first item in the list is interpreted as the default MIME type
+	 *                            for the format.
+	 * @param charset             The default character encoding of the format. Specify <var>null</var> if not
+	 *                            applicable.
+	 * @param fileExtensions      The format's file extensions, e.g. <var>srx</var> for SPARQL/XML files. The first item
+	 *                            in the list is interpreted as the default file extension for the format.
+	 * @param supportsTripleTerms <var>True</var> if the TupleQueryResultFormat supports the encoding of RDF triple
+	 *                            terms natively and <var>false</var> otherwise.
+	 * @since 6.0.0
 	 */
 	public TupleQueryResultFormat(String name, Collection<String> mimeTypes, Charset charset,
-			Collection<String> fileExtensions, boolean supportsRDFStar) {
+			Collection<String> fileExtensions, boolean supportsTripleTerms) {
 		super(name, mimeTypes, charset, fileExtensions);
-		this.supportsRDFStar = supportsRDFStar;
+		this.supportsTripleTerms = supportsTripleTerms;
 	}
 
 	/**
@@ -223,33 +201,34 @@ public class TupleQueryResultFormat extends QueryResultFormat {
 	 *                       the list is interpreted as the default file extension for the format.
 	 * @param standardURI    The standard URI that has been assigned to this format by a standards organisation or null
 	 *                       if it does not currently have a standard URI.
-	 * @since 3.2.0
+	 * @since 6.0.0
 	 */
 	public TupleQueryResultFormat(String name, Collection<String> mimeTypes, Charset charset,
 			Collection<String> fileExtensions, IRI standardURI) {
-		this(name, mimeTypes, charset, fileExtensions, standardURI, NO_RDF_STAR);
+		this(name, mimeTypes, charset, fileExtensions, standardURI, NO_TRIPLE_TERMS);
 	}
 
 	/**
 	 * Creates a new TupleQueryResultFormat object.
 	 *
-	 * @param name            The name of the format, e.g. "SPARQL/XML".
-	 * @param mimeTypes       The MIME types of the format, e.g. <var>application/sparql-results+xml</var> for the
-	 *                        SPARQL/XML format. The first item in the list is interpreted as the default MIME type for
-	 *                        the format.
-	 * @param charset         The default character encoding of the format. Specify <var>null</var> if not applicable.
-	 * @param fileExtensions  The format's file extensions, e.g. <var>srx</var> for SPARQL/XML files. The first item in
-	 *                        the list is interpreted as the default file extension for the format.
-	 * @param standardURI     The standard URI that has been assigned to this format by a standards organisation or null
-	 *                        if it does not currently have a standard URI.
-	 * @param supportsRDFStar <var>True</var> if the TupleQueryResultFormat supports the encoding of RDF-star triples
-	 *                        natively and <var>false</var> otherwise.
-	 * @since 3.2.0
+	 * @param name                The name of the format, e.g. "SPARQL/XML".
+	 * @param mimeTypes           The MIME types of the format, e.g. <var>application/sparql-results+xml</var> for the
+	 *                            SPARQL/XML format. The first item in the list is interpreted as the default MIME type
+	 *                            for the format.
+	 * @param charset             The default character encoding of the format. Specify <var>null</var> if not
+	 *                            applicable.
+	 * @param fileExtensions      The format's file extensions, e.g. <var>srx</var> for SPARQL/XML files. The first item
+	 *                            in the list is interpreted as the default file extension for the format.
+	 * @param standardURI         The standard URI that has been assigned to this format by a standards organisation or
+	 *                            null if it does not currently have a standard URI.
+	 * @param supportsTripleTerms <var>True</var> if the TupleQueryResultFormat supports the encoding of RDF triple
+	 *                            terms natively and <var>false</var> otherwise.
+	 * @since 6.0.0
 	 */
 	public TupleQueryResultFormat(String name, Collection<String> mimeTypes, Charset charset,
-			Collection<String> fileExtensions, IRI standardURI, boolean supportsRDFStar) {
+			Collection<String> fileExtensions, IRI standardURI, boolean supportsTripleTerms) {
 		super(name, mimeTypes, charset, fileExtensions, standardURI);
-		this.supportsRDFStar = supportsRDFStar;
+		this.supportsTripleTerms = supportsTripleTerms;
 	}
 
 	/*---------*
@@ -257,11 +236,11 @@ public class TupleQueryResultFormat extends QueryResultFormat {
 	 *---------*/
 
 	/**
-	 * Return <var>true</var> if the TupleQueryResultFormat supports the encoding of RDF-star triples natively.
+	 * Return <var>true</var> if the TupleQueryResultFormat supports the encoding of RDF triple terms natively.
 	 *
-	 * @since 3.2.0
+	 * @since 6.0.0
 	 */
-	public boolean supportsRDFStar() {
-		return supportsRDFStar;
+	public boolean supportsTripleTerms() {
+		return supportsTripleTerms;
 	}
 }
